--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,10 +4,10 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/csci5409-389802/container-2', './container-2/']
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/gcr.io/csci5409-389802/container-1']
+    args: ['push', 'gcr.io/csci5409-389802/container-1']
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/gcr.io/csci5409-389802/container-2']
+    args: ['push', 'gcr.io/csci5409-389802/container-2']
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['run', 'deploy', 'container-1', '--image', 'gcr.io/gcr.io/csci5409-389802/container-1', '--region', 'us-central1']
+    args: ['run', 'deploy', 'container-1', '--image', 'gcr.io/csci5409-389802/container-1', '--region', 'us-central1']
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['run', 'deploy', 'container-2', '--image', 'gcr.io/gcr.io/csci5409-389802/container-2', '--region', 'us-central1']
+    args: ['run', 'deploy', 'container-2', '--image', 'gcr.io/csci5409-389802/container-2', '--region', 'us-central1']
